# cara

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Claude.md  EARCON_IMPLEMENTATION_PLAN.md  NEXT_SPEPS.md  README.md  main.py  provide_cli_with_bash_tools.md  pyproject.toml  vad.md
cara/: __init__.py  assistant.py  audio.py  console_logging.py  conversation.py  credentials.py  hue.py  lifecycle.py  replies.py  settings.py  sonos.py  streaming.py  views.py
cara/audio/: __init__.py  barge_in.py  device.py  earcons.py  echo.py  microphone.py  player.py  ports.py  recorder.py  sonos.py  strategy.py  turn_detection.py  vad.py
cara/audio/models/: README.md  SMART_TURN_LICENSE
cara/events/: __init__.py  bus.py  views.py
cara/file_system/: __init__.py  base.py  local.py  workspace.py
cara/listener/: __init__.py  console.py  hue_listener.py  lights.py  regsitry.py  sound_listener.py
cara/llm/: __init__.py  models.py  registry.py
cara/messages/: __init__.py  context.py  manager.py  system_prompt.md  system_prompt.py
cara/skills/: __init__.py  models.py  parser.py  repository.py
cara/speech/: __init__.py  _client.py  models.py  ports.py  streaming.py  stt.py  tts.py
cara/tools/: __init__.py  binding.py  di.py  executor.py  middleware.py  params.py  schema_builder.py  schemas.py  tools.py  toolsets.py  views.py
cara/wakeword/: __init__.py  barge_in.py  listener.py  ports.py  views.py
docker/: bash-sandbox.Dockerfile
plans/: CORE_LOOP_ADVANCEMENTS.md
scripts/: discover_hue.sh  discover_sonos.sh  generate_sounds.py  prepare_bash_sandbox.sh
skills/weather/: SKILL.md
sound_generation/: __init__.py  generator.py  ports.py  settings.py  views.py
tests/: test_assistant.py  test_assistant_barge_in.py  test_assistant_earcons.py  test_assistant_streaming.py  test_messages.py  test_sound_listener.py  test_speech.py
tests/audio/: test_earcons.py  test_echo.py  test_player.py  test_recorder.py  test_sonos.py  test_strategy.py  test_voice_detection.py
tests/events/: test_bus.py
tests/file_system/: test_local.py
tests/llm/: test_registry.py
tests/skills/: test_parser.py  test_repository.py
tests/speech/: test_streaming.py
tests/tools/: test_binding.py  test_language_model_tool.py  test_middleware.py  test_skills.py  test_tools.py  test_weather_tool.py  test_web_search_tool.py
(+26 files in other folders)
