[project]
name = "cara"
version = "0.1.0"
description = "Small OpenAI speech wrappers for Cara."
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.4.6",
    "openai>=1.100.0",
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cara"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["cara"]
