[project]
name = "cara"
version = "0.1.0"
description = "Small OpenAI speech wrappers for Cara."
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.0",
    "hueify>=0.2.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.24.3",
    "openai>=1.100.0",
    "openwakeword>=0.6.0",
    "py-llmify>=0.6.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0",
    "sonosify>=0.2.0",
    "tavily-python>=0.7.26",
    "tzdata>=2024.1",
    "vocalbin>=0.1.0",
]

[project.optional-dependencies]
elevenlabs = [
    "elevenlabs>=2.58.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.uv]
# openwakeword pulls tflite-runtime (linux-only) which has no wheels for
# Python >= 3.12, while py-llmify requires >= 3.12. They only coexist off Linux.
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cara"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["cara"]
